# desafio-cientista-dados-pleno-campanhas

./: .gitignore  AGENTS.md  README.md  RELATORIO_ENTREVISTA.md  WALKTHROUGH.md  iniciar.sh  pyproject.toml  relatorio.html  run.py  visualizar.py
.agent/rules/: GEMINI.md
data/: schema.yml
notebooks/: 01_eda_qualidade.ipynb  02_priorizacao.ipynb  03_experimento_ab.ipynb
src/: scoring.py
